# ML-Algorithms

./: README.md
Bike_Sharing Dataset/: BikeSharing_linear_regression.ipynb  Bikesharing_MLP.ipynb  README.md  pyproject.toml
Imbalanced Telco Costumer Dataset/: README.md  Telco Costumer Churn.ipynb  pyproject.toml
Iris dataset/: Classification.ipynb  README.md  pyproject.toml
Logistic Regression/: Ad_click.ipynb  README.md  Titanic_dataset.ipynb  pyproject.toml
Neural Network/: CNN&LSTM.ipynb  CNN(Convlutional Neural Network).ipynb  README.md
Space Titanic/: README.md  SpaceTitanic.ipynb  pyproject.toml
